--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
 <html>
-  <head></head>
+  <head>
+    <title>My Angular App</title>
+    <link rel="stylesheet" href="style/bootstrap.css">
+  </head>
+  <body>
+    <h1>My Angular App, again</h1>
+    <p>...................</p>
+
+    <script src="javascript/jquery.min.js"></script>
+  </body>
 </html>
