--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <html>
-  <head>
-    <title>My Angular App</title>
-    <link rel="stylesheet" href="style/bootstrap.css">
-  </head>
-  <body>
-    <h1>My Angular App, again</h1>
-    <p>...................</p>
+<head>
+  <title>AngularApp</title>
+</head>
+<body>
+  <div class="container">
+    <div class="header">
+      <h3>AngularApp</h3>
+    </div>
 
-    <script src="javascript/jquery.min.js"></script>
-  </body>
+    <div class="jumbotron">
+      <h1>An Angular App</h1>
+      <p class="lead">Working with Angular and our own Bower packages. Nice.</p>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-4 col-md-4">
+        <div class="thumbnail">
+          <img src="">
+          <div class="caption">
+            <h3>Name 1</h3>
+            <p>Description 1</p>
+            <p><a href="#" class="btn btn-primary" role="button">Yes</a> <a href="#" class="btn btn-default" role="button">Nope</a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</body>
 </html>
