--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </div>
 
     <div class="jumbotron">
-      <h1>An Angular App</h1>
+      <h1> The Angular App</h1>
       <p class="lead">Working with Angular and our own Bower packages. Nice.</p>
     </div>
 
