--- a/index.html
+++ b/index.html
@@ -1,31 +1,36 @@
-<html>
+<html ng-app="angularApp">
 <head>
   <title>AngularApp</title>
+  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+ 
 </head>
-<body>
+<body ng-controller="PeopleListCtrl">
   <div class="container">
     <div class="header">
       <h3>AngularApp</h3>
     </div>
 
     <div class="jumbotron">
-      <h1> The Angular App</h1>
+      <h1> An Angular App</h1>
       <p class="lead">Working with Angular and our own Bower packages. Nice.</p>
     </div>
 
     <div class="row">
-      <div class="col-sm-4 col-md-4">
+
+      <div class="col-sm-4 col-md-4" ng-repeat="person in people">
         <div class="thumbnail">
-          <img src="">
+          <img ng-src="{{person.avatar}}">
           <div class="caption">
-            <h3>Name 1</h3>
-            <p>Description 1</p>
+            <h3>{{person.name}}</h3>
+            <p>{{person.description}}</p>
             <p><a href="#" class="btn btn-primary" role="button">Yes</a> <a href="#" class="btn btn-default" role="button">Nope</a></p>
           </div>
         </div>
       </div>
+
     </div>
   </div>
-
+<script src="bower_components/angular/angular.js"></script>
+<script src="javascript/controllers.js"></script>
 </body>
 </html>
