new bower-components added

--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
   </div>
 <script src="bower_components/angular/angular.js"></script>
 <script src="javascript/controllers.js"></script>
+<script src="bower_components/tinder-js-byohmmho/ajax_tinder.js"></script>
 </body>
 </html>
