--- a/index.html
+++ b/index.html
@@ -1,17 +1,27 @@
 <html ng-app="angularApp">
 <head>
-  <title>AngularApp</title>
+  <title>Tinder</title>
+
+  <!-- build:css bootstrap.min.css -->
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
- 
+  <!-- /build  -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.12/angular.min.js"></script>
+  <!-- build:js main.min.js -->
+  <script src="bower_components/bower-tinder-js/ajax.tinder.js"></script>
+  <script src="bower_components/bower-tinder-js/query.tinder.js"></script>
+  <script src="bower_components/bower-tinder-js/storage.tinder.js"></script>
+  <script src="javascript/controllers.js"></script>
+  <!-- /build  -->
+
 </head>
 <body ng-controller="PeopleListCtrl">
   <div class="container">
     <div class="header">
-      <h3>AngularApp</h3>
+      <h3>Tinder.js</h3>
     </div>
 
     <div class="jumbotron">
-      <h1> An Angular App</h1>
+      <h1>An Angular App</h1>
       <p class="lead">Working with Angular and our own Bower packages. Nice.</p>
     </div>
 
@@ -30,8 +40,6 @@
 
     </div>
   </div>
-<script src="bower_components/angular/angular.js"></script>
-<script src="javascript/controllers.js"></script>
-<script src="bower_components/tinder-js-byohmmho/ajax_tinder.js"></script>
+
 </body>
 </html>
