Only build files

--- a/index.html
+++ b/index.html
@@ -2,16 +2,9 @@
 <head>
   <title>Tinder</title>
 
-  <!-- build:css bootstrap.min.css -->
-  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
-  <!-- /build  -->
+  <link rel="stylesheet" href="bootstrap.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.12/angular.min.js"></script>
-  <!-- build:js main.min.js -->
-  <script src="bower_components/bower-tinder-js/ajax.tinder.js"></script>
-  <script src="bower_components/bower-tinder-js/query.tinder.js"></script>
-  <script src="bower_components/bower-tinder-js/storage.tinder.js"></script>
-  <script src="javascript/controllers.js"></script>
-  <!-- /build  -->
+  <script src="main.min.js"></script>
 
 </head>
 <body ng-controller="PeopleListCtrl">
