--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <html ng-app="angularApp">
 <head>
   <title>Tinder</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- build:css bootstrap.min.css -->
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
   <!-- /build  -->
+  <!-- build:css main.css -->
+  <link rel="stylesheet" href="build/main.css">
+  <!-- /build  -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.12/angular.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  
   <!-- build:js main.min.js -->
-  <script src="bower_components/bower-tinder-js/ajax.tinder.js"></script>
-  <script src="bower_components/bower-tinder-js/query.tinder.js"></script>
-  <script src="bower_components/bower-tinder-js/storage.tinder.js"></script>
+  <script src="bower_components/tinder-js-byohmmho/ajax.tinder.js"></script>
+  <script src="bower_components/tinder-js-byohmmho/query.tinder.js"></script>
+  <script src="bower_components/tinder-js-byohmmho/query.tinder.js"></script>
+  <script src="bower_components/tinder-js-byohmmho/storage.tinder.js"></script>
+  
   <script src="javascript/controllers.js"></script>
   <!-- /build  -->
 
@@ -17,29 +25,29 @@
 <body ng-controller="PeopleListCtrl">
   <div class="container">
     <div class="header">
-      <h3>Tinder.js</h3>
+      <h3 class="colored">Tinder.js</h3>
     </div>
 
     <div class="jumbotron">
-      <h1>An Angular App</h1>
+      <h1 class="colored">An Angular App</h1>
       <p class="lead">Working with Angular and our own Bower packages. Nice.</p>
     </div>
 
     <div class="row">
 
-      <div class="col-sm-4 col-md-4" ng-repeat="person in people">
-        <div class="thumbnail">
+      <div class="col-sm-4 col-md-4 thumb-absolute" ng-repeat="person in people">
+        <div class="thumbnail thumb-border">
           <img ng-src="{{person.avatar}}">
-          <div class="caption">
-            <h3>{{person.name}}</h3>
+          <div class="caption text-center">
+            <h3 id="text-colorgrey">{{person.name}}</h3>
             <p>{{person.description}}</p>
-            <p><a href="#" class="btn btn-primary" role="button">Yes</a> <a href="#" class="btn btn-default" role="button">Nope</a></p>
+            <p><a href="#" class="btn btn-primary btn-yes" role="button">Yes</a> <a href="#" class="btn btn-default btn-nope" role="button">Nope</a></p>
           </div>
         </div>
       </div>
 
     </div>
   </div>
-
+<script src="javascript/main.js"></script>
 </body>
 </html>
